Fixed alignment issues on pages.

--- a/gallery.css
+++ b/gallery.css
@@ -9,32 +9,20 @@
 	font-size: 40px;
 	font-family: 'open sans', sans-serif;
 }
+
 .column {
-  margin-top: 130px;
-  margin-left: 30px;	
-  float: right;
+  margin: 20px;
+  float: left;
   width: 20%;
-  height: 2%;
+  height: 30%;
   padding: 10px;
 }
 
-.column {
-  margin-top: 130px;	
-  margin-left: 30px;
-  float: right;
-  width: 20%;
-  height:2%;
-  padding: 10px;
+img {
+  width: 100%;
+  height: 100%;
 }
 
-.column {
-  margin-top: 130px;
-  margin-left: 30px;	
-  float: right;
-  width: 20%;
-  height: 2%;
-  padding: 10px;
-}
 /* Clear floats after image containers */
 .row::after {
   
