--- a/vaibhav.css
+++ b/vaibhav.css
@@ -15,7 +15,7 @@ background-color: rgba(0,0,0,0.4);
 }
 
 .leftmenu{
-width: 25%;
+width: 15%;
 float: left;
 }
 
